# ge-detector2

./: .gitignore  .main.cpp.kate-swp  CMakeLists.txt  HPGe_Import.kdev4  README.md  main.cpp
.kdev4/: HPGe_Import.kdev4
21_May/Bi214/: Bi214.pbs
21_May/Cs137/: Cs137.pbs
21_May/K40/: K40.pbs
21_May/Tl208/: Tl208.pbs
30_April/Run1/: run1.pbs
30_April/Run10/: run10.pbs
30_April/Run11/: run11.pbs
30_April/Run2/: run2.pbs
30_April/Run3/: run3.pbs
30_April/Run4/: run4.pbs
30_April/Run5/: run5.pbs
30_April/Run6/: run6.pbs
30_April/Run7/: run7.pbs
30_April/Run8/: run8.pbs
30_April/Run9/: run9.pbs
Ba133_cal/: Ba133sim.pbs
CAD/: .HPGe.gdml.kate-swp  Al_Foil.gdml  Al_Foil.stl  Copper_Cup.bms  Copper_Cup.brep  Copper_Cup.gdml  Copper_Cup.iges  Copper_Cup.ply  Copper_Cup.step  Copper_Cup.stl  Ge_B_Layer.dae  Ge_B_Layer.gdml  Ge_B_Layer.stl  Ge_Crystal.gdml  Ge_Crystal.stl  Ge_Li_Layer.gdml  Ge_Li_Layer.stl  HPGe.gdml  HPGe_efficiency.gdml  Mylar_Foil.gdml  Mylar_Foil.stl  Shell.gdml  Shell.stl  lead_core.gdml  lead_core2.gdml  steel_shell.gdml  steelshell2.gdml  whole_thing.stl
Co60_cal/: Co_60_E.sh  co60livesim.pbs
Co60_eff2/: dotest.pbs
Co60efftest/: dotest.pbs
Cs137_cal/: Cs137.sh  Cs137sim.pbs
Efficiency/: .nfs000000000045352900000014  eff.sh  efficiency.pbs  etest.mac  etestbad.mac
Efficiency/vis/: vis.mac
Rn222/: test.out
biggertest_newgeom/: co60livesim.pbs
htest/: htest.pbs
include/: DetectorConstruction.hh  HistoManager.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  SteppingAction.hh  geActionInitialization.hh  geColorReader.hh  geEventAction.hh  geHit.hh  geRunAction.hh  geTrackerHit.hh  geTrackerSD.hh
macros/: 2019_04_30_Run_1.mac  2019_04_30_Run_10.mac  2019_04_30_Run_11.mac  2019_04_30_Run_12.mac  2019_04_30_Run_2.mac  2019_04_30_Run_3.mac  2019_04_30_Run_4.mac  2019_04_30_Run_5.mac  2019_04_30_Run_6.mac  2019_04_30_Run_7.mac  2019_04_30_Run_8.mac  2019_05_21_Bi214.mac  2019_05_21_Cs137.mac  2019_05_21_K40.mac  2019_05_21_Tl208.mac  Ba133_0.mac  Co60_0.mac  Co60_1.mac  Co60_2.mac  Co60_3.mac  Copper_cobalt.mac  Cs137_0.mac  Cs137_1.mac  Cs137_high_0.mac  K40.mac  Rn222.mac  efficiency.mac  efficiency_Co60_0.mac  efficiency_Co60_1.mac  efficiency_Co60_10.mac  efficiency_Co60_11.mac  efficiency_Co60_2.mac  efficiency_Co60_3.mac  efficiency_Co60_4.mac  efficiency_Co60_5.mac  efficiency_Co60_6.mac  efficiency_Co60_7.mac  efficiency_Co60_8.mac  efficiency_Co60_9.mac  mac.cxx  (+7 more)
ntuptest/: test.mac
scripts/: Co_60_E.sh  dotest.pbs  energyprofile.R  energyprofile1.R  script.pbs  test.sh  work.sh
scripts/test.RAL/: dotest.pbs.o4688599  dotest.pbs.o4691055
src/: -DetectorConstruction.ccx  .DetectorConstruction.cc.kate-swp  DetectorConstruction.cc  HistoManager.cc  PhysicsList.cc  PhysicsList.ccx  PrimaryGeneratorAction.cc  SteppingAction.cc  geActionInitialization.cc  geColorReader.cc  geEventAction.cc  geHit.cc  geRunAction.cc  geTrackerHit.cc  geTrackerSD.cc
